set(TARGET perplexity)
add_executable(${TARGET}_1b4_inner perplexity_1b4_inner.cpp)
add_executable(${TARGET}_1b4_common perplexity_1b4_common.cpp)
add_executable(${TARGET}_7b_inner perplexity_7b_inner.cpp)
add_executable(${TARGET}_7b_common perplexity_7b_common.cpp)
install(TARGETS ${TARGET}_1b4_inner RUNTIME)
install(TARGETS ${TARGET}_1b4_common RUNTIME)
install(TARGETS ${TARGET}_7b_inner RUNTIME)
install(TARGETS ${TARGET}_7b_common RUNTIME)
target_link_libraries(${TARGET}_1b4_inner PRIVATE common llama ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(${TARGET}_1b4_common PRIVATE common llama ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(${TARGET}_7b_inner PRIVATE common llama ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(${TARGET}_7b_common PRIVATE common llama ${CMAKE_THREAD_LIBS_INIT})
target_compile_features(${TARGET}_1b4_inner PRIVATE cxx_std_11)
target_compile_features(${TARGET}_1b4_common PRIVATE cxx_std_11)
target_compile_features(${TARGET}_7b_inner PRIVATE cxx_std_11)
target_compile_features(${TARGET}_7b_common PRIVATE cxx_std_11)
if(TARGET BUILD_INFO)
  add_dependencies(${TARGET}_1b4_inner BUILD_INFO)
  add_dependencies(${TARGET}_1b4_common BUILD_INFO)
  add_dependencies(${TARGET}_7b_inner BUILD_INFO)
  add_dependencies(${TARGET}_7b_common BUILD_INFO)
endif()
